<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_play"
        android:orderInCategory="100"
        android:title="@string/toolbar_play"
        android:onClick="startClicked"
        android:icon="@drawable/ic_start_recording"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_stop"
        android:orderInCategory="200"
        android:title="@string/toolbar_stop"
        android:icon="@drawable/ic_stop_recording"
        android:onClick="stopClicked"
        app:showAsAction="ifRoom"
        ></item>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="300"
        android:title="@string/toolbar_settings"
        android:onClick="settingsClicked"
        android:icon="@drawable/ic_toolbar_settings"
        app:showAsAction="never"
        ></item>
</menu>