<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <com.jjoe64.graphview.GraphView
        android:layout_width="match_parent"
        android:layout_height="200dip"
        android:id="@+id/graph" />

    <TextView
        android:id="@+id/stepsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/steps_string" />

    <TextView
        android:id="@+id/linearAccelerationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/linear_acceleration" />

    <TextView
        android:id="@+id/accelerationXTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Acceleration X:" />

    <TextView
        android:id="@+id/accelerationYTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accelerationY" />

    <TextView
        android:id="@+id/accelerationZTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accelerationZ" />

    <TextView
        android:id="@+id/distanceTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/distance_traveled" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="startClicked"
        android:text="Start" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="stopClicked"
        android:text="Stop" />

</LinearLayout>